# full-br-index

./: .gitmodules  CMakeLists.txt  README.md
experiment_archive/: CMakeLists.txt  README.md
experiment_archive/src/: br_index_fixed.hpp  br_index_limited.hpp  br_index_st.hpp  bri-count.cpp  bri-mem.cpp  bri-space.cpp  fixedtest.cpp  k_vs_space.cpp  k_vs_time.cpp  rle_string.hpp  utils.hpp  window_slide.cpp
include/: br_index.hpp  definitions.hpp  huffman_string.hpp  rle_string.hpp  sparse_sd_vector.hpp
src/: br_index.cpp  br_index.hpp  br_index_fixed.hpp  br_index_full.hpp  br_index_limited.hpp  br_index_st.hpp  bri-build  bri-build.cpp  bri-count.cpp  bri-locate.cpp  bri-mem.cpp  bri-query.cpp  bri-seedex.cpp  bri-space.cpp  definitions.cpp  definitions.hpp  huffman_string.cpp  huffman_string.hpp  k_vs_space.cpp  permuted_lcp.hpp  pfpbuild.cpp  rle_string.hpp  sparse_sd_vector.cpp  sparse_sd_vector.hpp  x_treeop.cpp
src/pfpbuilder/: .gitignore  bigbwt  bwtparse.c  f2s.py  makefile  malloc_count.c  newscan.cpp  newscan.hpp  pfbwt.cpp  pscan.cpp  pscan.hpp  readme.md  simplebwt.c  unparse.c  unparsz.c  utils.h
test/: CMakeLists.txt  README.md  br_index_test.cpp  huffman_string_test.cpp  integration-test  itest1.cpp  itest2.cpp  permuted_lcp_test.cpp  rle_string_test.cpp  run_tests.cpp  sparse_sd_vector_test.cpp
test/dataset/: einstein.txt  influenza.txt
tool/: README.md  fasta2txt.py  generate_patterns.py  generate_sh.py  linear_scan.py
